# sylvia

./: .gitignore  CMakeLists.txt  README.md  grammar.ebnf  setup.sh
examples/: main.syl
src/: main.cpp
src/core/: token.hpp
src/core/ast/: node.hpp  stmts.hpp  values.hpp
src/syntax/: lexer.cpp  lexer.hpp  parser.cpp  parser.hpp
